Fix wrong word wrapping at C++ code samples

--- a/OpenGLGuide/Droid/Assets/pmg.css
+++ b/OpenGLGuide/Droid/Assets/pmg.css
@@ -284,6 +284,7 @@
  color:black;
  background-color: #ddecf2;  
  text-align : justify;
+ word-wrap: break-word;
  }
 .head3word
  {margin:0cm;
